[tool.poetry]
name = "blindmail"
version = "0.1.0"
description = ""
authors = ["Anjaneya02 <anjnaymahajan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.1"
pyttsx3 = "^2.90"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
